[gd_scene load_steps=3 format=2]

[ext_resource path="res://_common/GUI/SceneChangeButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://_common/GUI/RightSide.gd" type="Script" id=2]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
custom_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 93.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Body" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 1024.0
margin_bottom = 486.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftSide" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body"]
visible = false
margin_right = 510.0
margin_bottom = 373.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1

[node name="HBoxAudio" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/LeftSide"]
margin_top = 137.0
margin_right = 510.0
margin_bottom = 153.0
alignment = 1

[node name="MasterVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/Body/LeftSide/HBoxAudio"]
margin_left = 153.0
margin_top = 1.0
margin_right = 202.0
margin_bottom = 15.0
text = "Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Body/LeftSide/HBoxAudio"]
margin_left = 206.0
margin_right = 356.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )

[node name="HBoxAudio2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/LeftSide"]
margin_top = 178.0
margin_right = 510.0
margin_bottom = 194.0
alignment = 1

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/Body/LeftSide/HBoxAudio2"]
margin_left = 159.0
margin_top = 1.0
margin_right = 197.0
margin_bottom = 15.0
text = "Music"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Body/LeftSide/HBoxAudio2"]
margin_left = 201.0
margin_right = 351.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )

[node name="HBoxAudio3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/LeftSide"]
margin_top = 219.0
margin_right = 510.0
margin_bottom = 235.0
alignment = 1

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer/Body/LeftSide/HBoxAudio3"]
margin_left = 135.0
margin_top = 1.0
margin_right = 220.0
margin_bottom = 15.0
text = "Sound Effects"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Body/LeftSide/HBoxAudio3"]
margin_left = 224.0
margin_right = 374.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )

[node name="RightSide" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body"]
margin_right = 1024.0
margin_bottom = 373.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/RightSide"]
visible = false
margin_top = 105.0
margin_right = 510.0
margin_bottom = 125.0
alignment = 1

[node name="GraphicsLabel" type="Label" parent="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer"]
margin_left = 113.0
margin_top = 3.0
margin_right = 169.0
margin_bottom = 17.0
text = "Graphics"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer"]
margin_left = 173.0
margin_right = 396.0
margin_bottom = 20.0
text = "Mid-spec for decent machines"
items = [ "Lo-spec for Potatoes", null, false, 0, null, "Mid-spec for decent machines", null, false, 1, null, "Hi-spec for Bleeding Edge GPUs", null, false, 2, null ]
selected = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/RightSide"]
visible = false
margin_top = 105.0
margin_right = 510.0
margin_bottom = 125.0
alignment = 1

[node name="WindowLabel" type="Label" parent="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer4"]
margin_left = 162.0
margin_top = 3.0
margin_right = 243.0
margin_bottom = 17.0
text = "Window Size"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer4"]
margin_left = 247.0
margin_right = 347.0
margin_bottom = 20.0
text = "1024 x 600"
items = [ "800 x 600", null, false, 0, null, "1024 x 600", null, false, 1, null, "1280 x 720", null, false, 2, null, "1366 x 768", null, false, 3, null, "1600 x 900", null, false, 4, null, "1920 x 1080", null, false, 5, null, "1920 x 1200 (Ultra Wide)", null, false, 6, null ]
selected = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/RightSide"]
margin_top = 127.0
margin_right = 1024.0
margin_bottom = 151.0
alignment = 1

[node name="FullscreenLabel" type="Label" parent="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer5"]
margin_left = 465.0
margin_top = 5.0
margin_right = 531.0
margin_bottom = 19.0
text = "Fullscreen"

[node name="CheckButton3" type="CheckBox" parent="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer5"]
margin_left = 535.0
margin_right = 559.0
margin_bottom = 24.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/RightSide"]
margin_top = 176.0
margin_right = 1024.0
margin_bottom = 200.0
alignment = 1

[node name="EnableVsyncLabel" type="Label" parent="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer3"]
margin_left = 456.0
margin_top = 5.0
margin_right = 539.0
margin_bottom = 19.0
text = "Enable Vsync"

[node name="CheckButton2" type="CheckBox" parent="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer3"]
margin_left = 543.0
margin_right = 567.0
margin_bottom = 24.0
pressed = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/RightSide"]
visible = false
margin_top = 246.0
margin_right = 510.0
margin_bottom = 270.0
alignment = 1

[node name="ShowFPSLabel" type="Label" parent="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer2"]
margin_left = 211.0
margin_top = 5.0
margin_right = 270.0
margin_bottom = 19.0
text = "Show FPS"

[node name="CheckButton" type="CheckBox" parent="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer2"]
margin_left = 274.0
margin_right = 298.0
margin_bottom = 24.0

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/RightSide"]
margin_top = 225.0
margin_right = 1024.0
margin_bottom = 245.0
alignment = 1

[node name="FpsCapLabel" type="Label" parent="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer6"]
margin_left = 463.0
margin_top = 3.0
margin_right = 512.0
margin_bottom = 17.0
text = "Fps Cap"

[node name="OptionButton2" type="OptionButton" parent="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer6"]
margin_left = 516.0
margin_right = 561.0
margin_bottom = 20.0
text = "60"
items = [ "30", null, false, 0, null, "60", null, false, 1, null, "90", null, false, 2, null, "120", null, false, 3, null, "180", null, false, 4, null, "240", null, false, 5, null, "320", null, false, 6, null ]
selected = 1

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 506.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
alignment = 1

[node name="SceneChangeButton" parent="MarginContainer/VBoxContainer/Footer" instance=ExtResource( 1 )]
margin_left = 437.0
margin_right = 587.0
margin_bottom = 94.0
text = "Return to Main Menu"
return_to_main = true

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer4/OptionButton" to="MarginContainer/VBoxContainer/Body/RightSide" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer5/CheckButton3" to="MarginContainer/VBoxContainer/Body/RightSide" method="_on_CheckButton3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer3/CheckButton2" to="MarginContainer/VBoxContainer/Body/RightSide" method="_on_CheckButton2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer2/CheckButton" to="MarginContainer/VBoxContainer/Body/RightSide" method="_on_CheckButton_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Body/RightSide/HBoxContainer6/OptionButton2" to="MarginContainer/VBoxContainer/Body/RightSide" method="_on_OptionButton2_item_selected"]
